--- a/Presentation.html
+++ b/Presentation.html
@@ -57,7 +57,7 @@
 				<p>Help Center</p>
 				<p>Best action</p>
 				<p>Numbers</p>
-				<p>Les partenaires</p>
+				<p>Partnership</p>
 			</div>
 			<div class="colonne">
 				<p>FAQ</p>
