--- a/Index.html
+++ b/Index.html
@@ -34,10 +34,12 @@
 		<ul>	
 			<div class="contenuprincipal"><p> <font size="5">Actions :</font> <br><br>
 			<font size="5"><a target="_BLANK"></a><hr style="width:500px;"></font>
-				<font size="5"></font></p>
+				<font size="5"></font>Againt Social Discrimination<br>
+					We try to end social discriminations. We have multiples partnerships, the most important one is with
+				</p>
 
 			<div class="invite">
-				<font size="5"><a target="_BLANK"><h6>Réseaux :</h6></a><hr style="width:500px;"></font></a>			
+				<font size="5"><a target="_BLANK">Réseaux :</a><hr style="width:500px;"></font></a>			
 				<a href="https://www.instagram.com/association_the10k/"><font size="15"><i class="fab fa-instagram"></i></font></a>
 				<font size="15"><i class="fab fa-twitter"></i></font>
 				<font size="15"><i class="fab fa-facebook"></i></font>
@@ -55,10 +57,10 @@
 				<p>Mentions Légales</p>
 			</div>
 			<div class="colonne">
-				<p>Centre d'aide</p>
-				<p>Les meilleurs actions</p>
-				<p>Les chiffres</p>
-				<p>Les partenaires</p>
+				<p>Help Center</p>
+				<p>Best action</p>
+				<p>Numbers</p>
+				<p>Partnership</p>
 			</div>
 			<div class="colonne">
 				<p>FAQ</p>
