--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
 			<div class="contenuprincipal"><p> <font size="5">Actions :</font> <br><br>
 			<font size="5"><a target="_BLANK"></a><hr style="width:500px;"></font>
 				<font size="5"></font>Againt Social Discrimination<br>
-					We try to end social discriminations. We have multiples partnerships, the most important one is with
+					We try to end social discriminations. We have multiples partnerships, the most important one is with Aasi (Association againt social Inequality)
 				</p>
 
 			<div class="invite">
