--- a/Presentation.html
+++ b/Presentation.html
@@ -32,8 +32,8 @@
 	</section>
 		<!-- Infos -->
 		<ul>	
-			<div class="contenuprincipal"><p> <font size="7">Infos :</font> <br><br>
-				<font size="5"></font>The Best world begins with Solidarity</p></font>
+			<div class="contenuprincipal"><p> <font size="7">The Best world begins with Solidarity</font> <br><br>
+				<font size="5"></font></p></font>
 			<div id="Image">
 			<div class="images">
 				<img src="https://www.hoa-magazine.com/uploads/content/1569411076_media.jpg" alt="Riche" height="300">
