--- a/Membres.html
+++ b/Membres.html
@@ -32,12 +32,13 @@
 	</section>
 		<!-- Infos -->
 		<ul>	
-			<div class="contenuprincipal"><p> <font size="5">Members :</font> <br><br>
-			<font size="5"><a target="_BLANK"></a><hr style="width:500px;"></font>
-				<div class="images">
-					<img src="FélixMember.png" alt="Félix" height="300">
-					<img src="logo.png" alt="logo" height="300">
-					<img src="https://images.ladepeche.fr/api/v1/images/view/5c351c993e45464a4a16a945/large/image.jpg" alt="Pauvre" height="300">
+			<div class="contenuprincipal"><p> <font size="10">Members :</font> <br><br>
+				<div id="Membres">
+					<div class="images">
+						<img src="FélixMember.png" alt="Félix" height="300">
+						<img src="AntoineMember.jpg" alt="Antoine" height="300">
+						<img src="LouennMember.jpg" alt="Louenn" height="300">
+					</div>
 				</div>
 				<font size="5"></font></p>
 			</div>
