--- a/Membres.html
+++ b/Membres.html
@@ -35,7 +35,7 @@
 			<div class="contenuprincipal"><p> <font size="10">Members :</font> <br><br>
 				<div id="Membres">
 					<div class="images">
-						<img src="FélixMember.png" alt="Félix" height="300">
+						<img src="FélixMember.jpg" alt="Félix" height="300">
 						<img src="AntoineMember.jpg" alt="Antoine" height="300">
 						<img src="LouennMember.jpg" alt="Louenn" height="300">
 					</div>
