--- a/Connexion.html
+++ b/Connexion.html
@@ -25,7 +25,7 @@
     
     <p class="inscription">I have no <span>account</span>. <a href="Inscription.html">I <span>create</span> one.</a><a href="Index.html"><span> Return</span></a></p>
     <div align="center">
-      <button type="submit">Login</button>
+      <button name="submit" type="submit"><a href="FelixMembre.html">Login</a></button>
     </div>
   </form>
 </body>
